--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
+    "esbenp.prettier-vscode",
     "editorconfig.editorconfig",
-    "dbaeumer.vscode-eslint",
-    "ZixuanChen.vitest-explorer"
+    "dbaeumer.vscode-eslint"
   ]
 }
