--- a/package.json
+++ b/package.json
@@ -44,24 +44,28 @@
     "docs:serve": "vitepress serve docs"
   },
   "devDependencies": {
+    "@abmao/eslint-config-ts": "^2.1.2",
     "@abmao/pkgs": "latest",
-    "@antfu/eslint-config-ts": "^0.38.5",
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@types/node": "^20.8.7",
-    "@vitest/coverage-c8": "^0.31.0",
+    "@abmao/prettier-config": "^1.0.1",
+    "@antfu/eslint-config-ts": "^0.38.6",
+    "@commitlint/cli": "^16.3.0",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@types/node": "^20.14.12",
+    "@vitest/coverage-c8": "^0.31.4",
     "colors": "^1.4.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.41.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "esno": "^0.16.3",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
-    "typescript": "^5.2.2",
+    "lint-staged": "^12.5.0",
+    "typescript": "~5.1.0",
     "unbuild": "^2.0.0",
-    "vite-tsconfig-paths": "^4.2.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitepress": "1.0.0-beta.5",
-    "vitest": "^0.31.1"
+    "vitest": "^0.31.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,less,md,json}": "pnpm format"
