--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "item-template",
+  "name": "@abmao/store",
   "version": "0.0.0",
   "packageManager": "pnpm@8.5.1",
   "access": "public",
   "license": "MIT",
-  "homepage": "https://github.com/hengshanMWC/item-template#readme",
+  "homepage": "https://github.com/hengshanMWC/store#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hengshanMWC/item-template.git"
+    "url": "git+https://github.com/hengshanMWC/store.git"
   },
   "bugs": {
-    "url": "https://github.com/hengshanMWC/item-template/issues"
+    "url": "https://github.com/hengshanMWC/store/issues"
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "require": "./dist/index.cjs",
       "import": "./dist/index.mjs"
     }
   },
   "main": "./dist/index.mjs",
   "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -32,7 +30,6 @@
   },
   "scripts": {
     "commit": "cz",
-    "init": "pnpm i && npm run prepare",
     "prepare": "husky install",
     "build": "unbuild",
     "release": "esno ./scripts/release",
